# telemetry-system-cpp

./: CMakeLists.txt  README.md
applications/: logger_demo_app.cpp  metrics_demo_app.cpp  telemetry_demo_app.cpp
logger/: AsyncLogger.cpp  AsyncLogger.h
proto/: telemetry.proto
server/: telemetry_server.cpp
telemetry/: grpc_exporter.cpp  grpc_exporter.h  log_exporter.cpp  log_exporter.h  metric.h  metric_registry.cpp  metric_registry.h  telemetry_exporter.h  telemetry_service.cpp  telemetry_service.h
